# tetrs

./: Cargo.toml  rustfmt.toml
src/: app.rs  clap.rs  event.rs  handler.rs  lib.rs  main.rs  tests.rs  tetromino.rs  tui.rs  ui.rs
