[package]
name = "tetrs"
version = "0.2.3"
authors = ["Grace Murphy <localghost385@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.30"
rand = "0.8.5"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
